// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBanner renders for error style 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fd576a",
        "flexDirection": "row",
        "height": 55,
        "paddingHorizontal": 15,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/warning.png",
      }
    }
  />
  <Text
    numberOfLines={2}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 14,
        "marginLeft": 12,
      }
    }
  >
    hello
  </Text>
</View>
`;

exports[`AlertBanner renders for warning style 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ff9800",
        "flexDirection": "row",
        "height": 55,
        "paddingHorizontal": 15,
      },
      undefined,
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/warning.png",
      }
    }
  />
  <Text
    numberOfLines={2}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "SharpSans-Semibold",
        "fontSize": 14,
        "marginLeft": 12,
      }
    }
  >
    hello
  </Text>
</View>
`;
